# rust-axum-shuttle-tauri-nextjs-example

./: .env  Cargo.toml  Makefile  bun.lockb  next.config.mjs  package.json  tsconfig.json
backend/: .env.example  Cargo.toml  Shuttle.toml  docker-compose.yml  openapi.json
backend/.sqlx/: query-1680d33e4b8d20f45cbeda1c46be0501ad02f212c33ae77e5afb9dda051415da.json  query-17f341e8c3c9a89bf6e547ecae404343fd90a1d04ae8f31939a99d089a966bd1.json  query-39a57d15e577cc030593298be02e19d4b9b87be327cd818a8711a33a12a7da5e.json  query-5084a2f79c01fa5f903823648bbcf0996a887efa18b47315898270d229ccba03.json  query-d2a6b13646bd05e3849b7b30a7597d719f51f4f1fbb79ba28590904130dc4bb8.json
backend/src/: handlers.rs  main.rs  repositories.rs
shared/: Cargo.toml
shared/src/: lib.rs  network.rs  store.rs
shared/src/todos/: Cargo.toml
shared/src/todos/src/: model.rs  service.rs
shared/todos/src/: repository.rs
src/: handlers.rs  main.rs  repositories.rs
src-cloud/: .gitignore  Cargo.toml  Secrets.toml.example  Shuttle.toml  openapi.json
src-cloud/src/: handlers.rs  main.rs  repositories.rs  routes.rs
src-cloud/src/domains/todos/: controller.rs  dependency.rs  mod.rs  route.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/domains/: mod.rs
src-tauri/src/domains/todos/: controller.rs
src/api/: $api.ts
src/api/@types/: index.ts
src/api/todos/: index.ts
src/api/todos/_id@number/: index.ts
src/app/: layout.tsx  page.tsx
src/app/(main)/: layout.tsx  page.tsx
src/app/(main)/_layout/Header/: index.tsx
src/components/index/: Content.tsx
src/components/index/TodoCreator/: index.tsx  validators.ts
src/components/index/TodoList/: index.tsx
src/components/index/TodoList/TodoListItem/: index.tsx
src/components/index/TodoList/TodoListItem/CheckButton/: index.tsx
src/components/index/TodoList/TodoListItem/DeleteButton/: index.tsx
src/components/index/TodoList/TodoListItem/DeleteButton/DialogContent/: index.tsx
src/components/index/common/functions/: createTodo.ts  deleteTodo.ts  updateTodo.ts
src/lib/: $path.ts  errorMessages.ts  fetcher.ts  tauri.ts
src/lib/hooks/: useDialog.tsx
src/styles/: globals.css
src/theme/: index.ts
