[package]
name = "my-todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
axum = "0.7.5"
dotenv = "0.15.0"
http-body = "1.0.0"
http-body-util = "0.1.1"
hyper = { version = "1.2.0", features = ["full"] }
mime = "0.3.17"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
shuttle-axum = "0.44.0"
shuttle-runtime = "0.44.0"
shuttle-shared-db = { version = "0.44.0", features = ["postgres"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "any", "postgres"] }
sqlx-cli = "0.7.4"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utoipa = { version = "4.2.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
validator = { version = "0.18", features = ["derive"] }

[dev-dependencies]
cargo-watch = "8.5.2"

[features]
default = ["database-test"]
database-test = []
