[package]
name = "todos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
axum = "0.7.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "any", "postgres"] }
sqlx-cli = "0.7.4"
thiserror = "1.0.58"
utoipa = { version = "4.2.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
validator = { version = "0.18", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
dotenv = "0.15.0"

[features]
default = ["database-test"]
database-test = []
